Refactor DB schema with Flyway and cleanup unused tables